syntax = "proto3";

package auth;

import "validate/validate.proto";

option go_package = "muaz.sso.v1;ssov1";

// Auth is service for managing permissions and roles.
service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc IsAdmin (IsAdminRequest) returns (IsAdminResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc CheckToken (CheckTokenRequest) returns (CheckTokenResponse);
}

message IsAdminRequest {
  int64 user_id = 1 [(validate.rules).int64.gt = 0];
}

message IsAdminResponse {
  bool is_admin = 1;
}

message RegisterRequest {
  string email = 1 [(validate.rules).string.email = true];
  string password = 2 [(validate.rules).string.min_len = 6];
}

message RegisterResponse {
  int64 user_id = 1;
}

message LoginRequest {
  string email = 1 [(validate.rules).string.email = true];
  string password = 2 [(validate.rules).string.min_len = 6];
  int32 app_id = 3 [(validate.rules).int32.gt = 0];
}

message LoginResponse {
  string token = 1;
}

message LogoutRequest {
  string token = 1 [(validate.rules).string.min_len = 1];
  int32 app_id = 2 [(validate.rules).int32.gt = 0];
}

message LogoutResponse {
  bool success = 1;
}

message CheckTokenRequest {
  string token = 1 [(validate.rules).string.min_len = 1];
  int32 app_id = 2 [(validate.rules).int32.gt = 0];
}

message CheckTokenResponse {
  int64 user_id = 1;
  bool is_valid = 2;
  repeated string roles = 3;
}